cmake_minimum_required(VERSION 3.8)
project(Cpp-STL-Examples VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(Cpp_11above)
add_subdirectory(deques)
add_subdirectory(enums)
#add_subdirectory(FirstGoogleTest)
add_subdirectory(io)
add_subdirectory(lambdas)
add_subdirectory(lists)
add_subdirectory(maps)
add_subdirectory(misc)
add_subdirectory(namespaces)
add_subdirectory(operators)
add_subdirectory(patterns)
add_subdirectory(regex)
add_subdirectory(stacks)
add_subdirectory(strings)
add_subdirectory(templates)
add_subdirectory(threading)
add_subdirectory(vectors)