cmake_minimum_required(VERSION 3.8)
project(Cpp_11above VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Cpp_11above_auto1 auto1.cpp)
add_executable(Cpp_11above_auto2 auto2.cpp)
add_executable(Cpp_11above_auto3 auto3.cpp)
add_executable(Cpp_11above_cpuset_ex1 cpuset_ex1.cpp)
add_executable(Cpp_11above_thread1 thread1.cpp)
add_executable(Cpp_11above_thread2 thread2.cpp)
add_executable(Cpp_11above_thread3 thread3.cpp)
add_executable(Cpp_11above_thread4 thread4.cpp)
add_executable(Cpp_11above_tuple_ex1 tuple_ex1.cpp)