cmake_minimum_required(VERSION 3.8)
project(maps_example VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 11)

add_executable(maps_map1 map1.cpp)
add_executable(map_ex3 map_ex3.cpp)
add_executable(map_ex3_ii map_ex3_ii.cpp)
add_executable(map_ex_1 map_ex_1.cpp)
add_executable(map_ex_2 map_ex_2.cpp)
add_executable(map_ex_4 map_ex_4.cpp)
add_executable(map_ex_5 map_ex_5.cpp)
add_executable(map_ex_6 map_ex_6.cpp)